<resources>
    <string name="app_name">LittleMarket</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello Add article fragment</string>
    <string name="text_insert">INSERT</string>
    <string name="text_list">ARTICLES</string>
    <string name="text_modify">MODIFY</string>
    <string name="product_name">Producto</string>
    <string name="price">Precio</string>
    <string name="discount">Descuento</string>
    <string name="btn_save_product">GUARDAR</string>
    <string name="btn_delete_article">Eliminar</string>
    <string name="btn_modify_article">Modificar</string>
    <string name="btn_upload_picture">Cargar Foto</string>
    <string name="article_image">Imagen del artículo</string>
</resources>